# RiverDeck-Redux

./: .gitignore  Cargo.toml  LICENSE.md  README.md  check-elgato-api.rs
.github/workflows/: ci.yml
crates/actions/: Cargo.toml
crates/actions/src/: lib.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: ids.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs  stream_deck.rs
crates/openaction/: Cargo.toml
crates/openaction/src/: installer.rs  lib.rs  manifest.rs  marketplace.rs  registry.rs
crates/plugin-runtime/: Cargo.toml
crates/plugin-runtime/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lcd.rs  lib.rs  plus_strip.rs  test_patterns.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  paths.rs  profiles.rs
crates/transport-hid/: Cargo.toml
crates/transport-hid/src/: lib.rs
crates/ui-iced/: Cargo.toml
crates/ui-iced/src/: main.rs
test-elgato-api/: Cargo.toml
test-elgato-api/src/: main.rs
test-streamdeck/: Cargo.toml
test-streamdeck/src/: main.rs
