[package]
name = "device"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
app-core = { path = "../app-core" }
anyhow.workspace = true
async-trait.workspace = true
elgato-streamdeck.workspace = true
hidapi.workspace = true
image.workspace = true
render = { path = "../render" }
tokio.workspace = true
tracing.workspace = true

