[package]
name = "openaction"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true


