[package]
name = "ui-iced"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
app-core = { path = "../app-core" }
device = { path = "../device" }
iced.workspace = true
openaction = { path = "../openaction" }
plugin-runtime = { path = "../plugin-runtime" }
serde_json.workspace = true
storage = { path = "../storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true


