[package]
name = "ui-iced"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actions = { path = "../actions" }
app-core = { path = "../app-core" }
device = { path = "../device" }
iced.workspace = true
openaction = { path = "../openaction" }
plugin-runtime = { path = "../plugin-runtime" }
render = { path = "../render" }
rodio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
pulldown-cmark = "0.12"
storage = { path = "../storage" }
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true


