[package]
name = "ui-iced"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actions = { path = "../actions" }
app-core = { path = "../app-core" }
device = { path = "../device" }
iced.workspace = true
image.workspace = true
openaction = { path = "../openaction" }
plugin-runtime = { path = "../plugin-runtime" }
render = { path = "../render" }
rodio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
pulldown-cmark = "0.12"
usvg.workspace = true
storage = { path = "../storage" }
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = { version = "0.15", default-features = false, features = ["gtk3", "tokio"] }
iced_aw = { version = "0.9", default-features = false, features = ["color_picker", "modal"] }


